# github-actions-clipboard-sample

./: README.md  command.py  pyproject.toml
.github/workflows/: unittest.yml
tests/: test_command.py
