[tool.poetry]
name = "github-actions-clipboard-sample"
version = "0.1.0"
description = ""
authors = ["denzow <denzow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
